<?xml version="1.0"?>
<package format="2">
  <name>aws_iot_mqtt_bridge</name>
  <version>1.0.0</version>
  <description>AWS IoT MQTT bridge for connecting robots as AWS IoT Core devices.</description>
  <url type="repository">https://github.com/aws-robotics/aws-iot-bridge-example</url>

  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>mqtt_bridge</depend>
  <depend>mosquitto</depend>
  <depend>mosquitto-clients</depend>
  <depend>python-inject-pip</depend>
  <depend>python-paho-mqtt-pip</depend>
  <depend>python-msgpack</depend>
  <depend>python-pymongo</depend>
</package>
